# periscope

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md
desktop/: Cargo.toml
desktop/src/: cli.rs  config.rs  main.rs  net.rs  skin.rs  ui.rs  viewer.rs
desktop/src/skin/: config_skin.rs  display_skin.rs  mod.rs
nx/libscope/include/: config.h  ipc.h
nx/libscope/src/: config.c  ipc.c  ipc_server.c
nx/overlay/: Makefile
nx/overlay/include/: config.hpp  error.hpp  main_gui.hpp  player_gui.hpp  proc.hpp
nx/overlay/src/: config.cpp  error.cpp  main.cpp  main_gui.cpp  player_gui.cpp  proc.cpp
nx/sysmodule/: Makefile  config.json
nx/sysmodule/include/: server.h  service.h
nx/sysmodule/src/: main.c  server.c  service.c  svc.c
