[package]
name = "periscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.35"
nalgebra = "0.30"
directories = "5.0"
clap = {version = "4.3", features = ["derive"]}
eframe = "0.22"
toml = "0.7"
anyhow = "1.0"
