[package]
name = "periscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.3", features = ["derive"]}
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
directories = "5.0"
eframe = "0.22"
image = "0.24"
macroquad = {version = "0.3", default-features = false}
once_cell = "1.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7"
